Revert "Added rates calculator page and connected the pages to eachother"
This reverts commit fc591c643fb11efc98719c32f9380c8410ea0934.

--- a/templates/Main.html
+++ b/templates/Main.html
@@ -69,11 +69,11 @@
     <header>
         <div class="nav-links">
             <a href="#">About Us</a>
-            <a href="rates.html">Rates Calculator</a>
+            <a href="#">Something Else</a>
         </div>
         
         <div class="auth-links">
-            <a href="login_page.html">Login / Profile</a>
+            <a href="#">Login / Profile</a>
         </div>
     </header>
 
