Removed the double templates folder and fixed main.html

--- a/front_end/templates/main.html
+++ b/front_end/templates/main.html
@@ -69,11 +69,11 @@
     <header>
         <div class="nav-links">
             <a href="#">About Us</a>
-            <a href="#">Something Else</a>
+            <a href="rates.html">Rates Calculator</a>
         </div>
         
         <div class="auth-links">
-            <a href="#">Login / Profile</a>
+            <a href="auth.html">Login / Profile</a>
         </div>
     </header>
 
